# logic-TPTP

./: .gitignore  .travis.yml  Lexer.x  MACROS.h  Parser.y  Parser2.y  ParserC.y  Util.hs  changelog.markdown  logic-TPTP.cabal
.github/workflows/: haskell.yml
Codec/: FOL.hs  Lexer.hs  Lexer.info  Parser.hs  Parser.info  TPTP.hs
Codec/TPTP/: Base.hs  Diff.hs  Export.hs  Import.hs  Pretty.hs  QuickCheck.hs
data/: sets.tptp
testing/: Common.hs  ParseRandom.hs  PrettyPrintFile.hs  Prof.hs  SimpleArgs.hs  TestImportExportImportFile.hs  TestImportExportRandom.hs  compileTests.sh  profiling.sh  runTests.sh
