name: logic-TPTP    
version: 0.1
cabal-version: >= 1.6
build-type: Custom
license: GPL
license-file: LICENSE
maintainer: Daniel Schüssler <daniels@community.haskell.org>
stability: Alpha
bug-reports: mailto:daniels@community.haskell.org 
synopsis: Parse, pretty-print or export TPTP files
description: 
 For information about the TPTP format, see <http://www.cs.miami.edu/~tptp/>.
 .
 Not yet implemented: The /thf/ formula type, /formula_data/, /include/ statements.
 
category: Codec,Logic
author: Daniel Schüssler
cabal-version: >= 1.6

source-repository head
 type: darcs
 location: http://code.haskell.org/~daniels/logic-TPTP
 

Library
 ghc-options:     -O2
 
 build-depends:    base >=4 ,array, syb, containers, haskell98
                   , ansi-wl-pprint, QuickCheck>=2               
                   , utf8-prelude
 
 exposed-modules:   Codec.TPTP.Import
                   ,Codec.TPTP.Base
                   ,Codec.TPTP
                   ,Codec.TPTP.Pretty
                   ,Codec.TPTP.Export
                   ,Codec.TPTP.Diff
 
 other-modules:
                    Lexer     
                  , Parser
                   ,Codec.TPTP.QuickCheck
